--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <!-- <a href="#" class="nav-link">Product</a> -->
         <!-- <a href="#" class="nav-link">Pricing</a> -->
         <a href="https://www.xiaohongshu.com/user/profile/640f36e100000000290103df?xsec_token=YBIYD3sUvxc8AZvBnfvm2XsOkBINk6zfsOx3f8M0_izwo=&xsec_source=app_share&xhsshare=CopyLink&appuid=640f36e100000000290103df&apptime=1744799480&share_id=67d2dc9d31084b458d01eae68e665285" class="nav-link" target="_blank" rel="noopener noreferrer">Contact me</a>
-        <!-- <a href="#" class="nav-link">Blog</a> -->
+        <a href="https://www.figma.com/@lwnxai" class="nav-link">Other</a>
         <!-- <a href="#" class="nav-link">Sign in</a> -->
         <!-- <a href="#" class="nav-btn">Get Started for Free</a> -->
       </nav>
@@ -412,26 +412,11 @@
           <div class="faq-a">Yes, EditLottie supports real-time team collaboration and sharing.</div>
         </div>
       </div>
-    </section> -->
-    <footer class="footer">
+    </section> -->    <footer class="footer">
       <div class="footer-inner">
-        <span> 2025 EditLottie | Designed ❤️ by Weylandx</span>
+        <span> 2025 EditLottie. Designed ❤️ by Weylandx</span>
       </div>
     </footer>
-    <!-- 页脚 -->
-    <!-- <footer class="footer">
-      <div class="footer-content">
-        <img src="https://framerusercontent.com/images/JkAvwuKyp6A8hopPbV1p3mE8.svg" class="footer-logo" alt="EditLottie Logo" style="display:none;">
-        <span class="footer-emoji" style="font-size: 32px;">✨</span>
-        <div class="footer-links">
-          <a href="#" class="footer-link">About</a>
-          <a href="#" class="footer-link">Blog</a>
-          <a href="#" class="footer-link">Contact</a>
-        </div>
-        <div class="footer-copy"> 2025 EditLottie. All rights reserved.</div>
-      </div>
-    </footer> -->
-    <!-- 更多内容可根据需求补充 -->
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.2/lottie.min.js"></script>
 </body>
