--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button class="modal-btn" id="download-lottie-btn">下载修改文件</button>
-            <button class="modal-btn" id="undo-delete-btn">撤回已删除的参数</button>
+            <button class="modal-btn" id="download-lottie-btn">Download the modified file</button>
+            <button class="modal-btn" id="undo-delete-btn">Undo a deleted parameter</button>
           </div>
         </div>
       </div>
