--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button class="modal-btn" id="download-lottie-btn">Download the modified file</button>
-            <button class="modal-btn" id="undo-delete-btn">Undo a deleted parameter</button>
+            <button class="modal-btn" id="download-lottie-btn">Download file</button>
+            <button class="modal-btn" id="undo-delete-btn">Undo the action</button>
           </div>
         </div>
       </div>
