--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
       </div>
     </section> -->    <footer class="footer">
       <div class="footer-inner">
-        <span> 2025 EditLottie. Designed ❤️ by Weylandx</span>
+        <span class="beian-link">2025 EditLottie. Designed ❤️ by Weylandx</span>
+        <a class="beian-link" href="https://beian.miit.gov.cn/" target="_blank" rel="noopener noreferrer">粤ICP备2025374256号-1</a>
       </div>
     </footer>
   </div>
